# bridge

./: .gitignore  README.md
case/: handle.FCStd  handle.FCStd1
computations/: filters_bandwidth.wxmx
cubemx_project/: .gitignore  pads_config.ioc
cubemx_project/bridge/bridge/: .cproject  .mxproject  .project  bridge.cfg  bridge.ioc  bridge.xml  debug_ext.sh  debug_ext_w.sh
cubemx_project/bridge/bridge/Inc/: bno055.h  stm32f4xx_hal_conf.h  task_host.h  task_imu.h  task_led.h  usbd_conf.h  usbh_conf.h
cubemx_project/bridge/bridge/Src/: freertos.c  gpio.c  i2c.c  main.c  stm32f4xx_it.c  task_host.c  task_imu.c  task_led.c  usb_host.c  usbd_desc.c
cubemx_project/bridge/emg/: emg.ioc
cubemx_project/bridge/emg/emg/: emg.ioc
cubemx_project/bridge_btns/: .gitignore  bridge_btns.ioc
cubemx_project/bridge_btns/bridge_btns/: .cproject  .mxproject  .project  bridge_btns.cfg  bridge_btns.ioc  bridge_btns.xml  debug_ext.sh  debug_ext_w.sh
cubemx_project/bridge_btns/bridge_btns/Inc/: main.h  spi.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  task_imu.h  usb_device.h  usbd_desc.h
cubemx_project/bridge_btns/bridge_btns/Src/: bno055.c  freertos.c  gpio.c  i2c.c  main.c  main_btns.c  spi.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_TIM.c  stm32f4xx_it.c  task_imu.c  task_led.c  usb_device.c  usbd_conf.c  usbd_desc.c
cubemx_project/bridge_btns/test/: .cproject  .mxproject  debug_ext_w.sh  test.cfg  test.ioc  test.xml
cubemx_project/bridge_btns/test/Inc/: stm32f4xx_hal_conf.h  stm32f4xx_it.h
cubemx_project/bridge_int_clk/bridge_int_clk/: .cproject  .mxproject  .project  bridge_int_clk.ioc  bridge_int_clk.xml  debug_ext.sh
cubemx_project/emg/: .cproject  .mxproject  .project  debug_ext_w.sh  emg.cfg  emg.ioc  emg.xml
cubemx_project/emg/Inc/: stm32f4xx_it.h
cubemx_project/emg/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_hal_timebase_TIM.c  stm32f4xx_it.c  usbd_conf.c
cubemx_project/with_i2c/: .cproject  .mxproject  with_i2c.ioc  with_i2c.xml
cubemx_project/with_i2c/Inc/: main.h  stm32f4xx_hal_conf.h  usbd_conf.h  usbh_conf.h
cubemx_project/with_i2c/Src/: gpio.c  main.c  stm32f4xx_it.c  usb_device.c  usbd_desc.c
cubemx_project/with_i2c/with_i2c/: .cproject  .mxproject  .project  with_i2c.ioc
docs/690-005-299-043_usb_b_mini/: url.txt
docs/87583-3010RPALF_usb_a_host/: url.txt
docs/ABMM-12.000MHZ-B2-T/: url.txt
docs/FY0800018_crystal_8mhz/: url.txt
docs/max3421e/: url.txt
docs/max3421e/parts/: 21-0110B.step  KiCAD\KiCAD\footprints.pretty\MAX3421EEHJ&plus_.kicad_mod  KiCAD\KiCAD\symbols.lib  STL\STL\STEP\21-0110B-L.step  STL\STL\STEP\21-0110B-M.step  STL\readme.txt  readme.txt
docs/stm32f103cbt6/: KiCAD\KiCAD\footprints.pretty\STM32F103CBT6.kicad_mod  KiCAD\KiCAD\readme.txt  LQFP-48-L.step  STL\STL\STEP\LQFP-48-M.step  STL\STL\STEP\LQFP-48.step  STL\readme.txt  symbols.lib
docs/stm32f105r8t6/: KiCAD\KiCAD\symbols.lib  LQFP-64-M.step  LQFP-64.step  STL\STL\STEP\LQFP-64-L.step  STM32F105R8T6.kicad_mod  readm_stle.txt  readme.txt  url.txt
docs/stm32f405rgt6/component/: KiCAD\KiCAD\readme.txt  KiCAD\KiCAD\symbols.lib  LQFP-64-L.step  LQFP-64-M.step  STL\STL\STEP\LQFP-64.step  STM32F405RGT6.kicad_mod  readme_stl.txt
electrical/bridge/: _saved_host.sch  bridge-cache.lib  bridge-rescue.lib  bridge.bak  bridge.kicad_pcb  bridge.kicad_pcb-bak  bridge.net  bridge.pro  bridge.sch  host.bak  sym-lib-table
electrical/bridge/rescue-backup/: bridge-cache-2018-09-11-16-57-54.lib  bridge-rescue-2018-09-14-16-05-46.lib
electrical/bridge_btns/: bridge-cache.lib  bridge.bak  bridge.csv  bridge.kicad_pcb  bridge.kicad_pcb-bak  bridge.net  bridge.pro  bridge.sch  file5A699BDF.sch  fp-lib-table  host.sch
electrical/bridge_btns/ordering_components/: bridge.csv
electrical/bridge_btns/rescue-backup/: bridge-2018-09-11-16-57-54.pro  bridge-2018-09-14-16-05-46.pro  sym-lib-table-2018-09-14-16-05-46
electrical/components/: ad8226.lib  ad8603.lib  stm32f105r8t6.bak  stm32f105r8t6.lib  stm32f405rgt6.bak  stm32f405rgt6.lib  tsv734ipt.lib  tsz124ipt.lib  usb_b.bak  usb_b.bck  usb_b.dcm  usb_b.lib
electrical/emg/: _saved_emg.sch  emg-cache.lib  emg.bak  emg.kicad_pcb  emg.kicad_pcb-bak  emg.net  emg.pro  emg.sch  inst_amp.bak  inst_amp.sch
electrical/emg_preamp/: amg_preamp-cache.lib  amg_preamp.bak  amg_preamp.kicad_pcb  amg_preamp.kicad_pcb-bak  amg_preamp.net  amg_preamp.pro  amg_preamp.sch  fp-lib-table
electrical/emg_preamp_2/: amg_preamp_2-cache.lib  amg_preamp_2.bak  amg_preamp_2.csv  amg_preamp_2.kicad_pcb  amg_preamp_2.kicad_pcb-bak  amg_preamp_2.net  amg_preamp_2.pro  amg_preamp_2.sch  amg_preamp_2.xml
electrical/footprints/my-lib.pretty/: my_usb_a.kicad_mod
emg_bom/: amg_preamp_2.csv  bom_emg.csv  bom_emg_preamp.csv
emg_calc/: estimations.wxmx  inverting_amp_with_high_pass.wxmx
emg_docs/TSV734IPT_opamp/: link.txt
emg_docs/TSZ124IPT_opamp/: link.txt
emg_docs/ad86_03_07_09/: link.txt
emg_docs/ref_voltage/: link.txt
emg_mechanical/: board_holders.fcstd  board_holders.fcstd1  combined_holder.stl  mcu_holder.stl
emg_media/: .gitignore  hand.blend  hand.blend1  hand_gun.blend  hand_gun.blend1
mechanical/: case.fcstd  case.fcstd1  ps1.fcstd  ps1.fcstd1
software/: CMakeLists.txt
software/3dparty/: CMakeLists.txt
software/3dparty/gpr/include/gaussian_process_regression/: gaussian_process_regression.h
software/app_plot/: CMakeLists.txt
software/app_plot/configs/: imgui.ini  plugins.cfg  resources.cfg  resources_d.cfg
software/app_plot/pa/: portable_archive_exception.hpp  portable_iarchive.hpp  portable_insts.hpp  portable_oarchive.hpp
software/app_plot/src/: al_stream.cpp  al_stream.h  classifier.cpp  classifier.h  fitter.cpp  fitter.h  main.cpp  plot_maker.cpp  plot_maker.h
software/io/: CMakeLists.txt
software/io/src/: io.cpp  io.h
software/io/t/: example.c
software/test_al/: CMakeLists.txt
software/test_al/src/: al_stream.cpp  al_stream.h  al_wrap.cpp  al_wrap.h  main.cpp
software/test_app/: CMakeLists.txt
software/test_app/src/: main.cpp
software/test_gp/: CMakeLists.txt
software/test_gp/src/: main.cpp
(+41 files in other folders)
